auslagern des head im html in eine eigene Datei

--- a/src/main/resources/templates/startseite.html
+++ b/src/main/resources/templates/startseite.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head>
+	<head th:include="fragments/head :: headFragment (pageTitle='Startseite')">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
    		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<!-- Bootstrap 5 -->
