--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,11 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head th:include="fragments/head :: headFragment (pageTitle='Startseite')">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-   		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<!-- Bootstrap 5 -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<head th:include="fragments/head :: headFragment (pageTitle='Login')">
 	</head>
 	<body class="" style="background-color: rgba(27, 30, 31, 1.00)">
 	 <div class="container">
@@ -22,15 +17,20 @@
 			<div class="d-flex align-items-center justify-content-center">
             	<h4 class="pt-4 mb-5 fw-light fs-5">Herzlich willkommen!</h4>
 			</div>
-            <form>
-
+            <form name="f" th:action="@{/login}" method="post">
+				<div th:if="${param.error}" class="alert alert-error">    
+                    keinen korrekter Benutzername oder Passwort.
+                </div>
+                <div th:if="${param.logout}" class="alert alert-success"> 
+                    Sie sind nun Abgemeldet.
+                </div>
               <div class="form-floating mb-3">
-                <input type="text" class="form-control" id="username" placeholder="Benutzername" required autofocus>
+                <input type="text" class="form-control" id="username" name="username" placeholder="Benutzername" required autofocus>
                 <label for="username">Benutzername</label>
               </div>
 
               <div class="form-floating mb-3">
-                <input type="password" class="form-control" id="password" placeholder="Passwort">
+                <input type="password" class="form-control" id="password" name="password" placeholder="Passwort">
                 <label for="password">Passwort</label>
               </div>
 
@@ -39,7 +39,7 @@
                 <button class="btn btn-lg btn-primary btn-login fw-bold text-uppercase" type="submit">Anmelden</button>
               </div>
 
-              <a class="d-block text-center mt-2 small" href="#">Passwort vergessen?</a>
+              <a class="d-block text-center mt-2 small" th:href="@{/passwordReset}">Passwort vergessen?</a>
 
             </form>
           </div>
