hmtl Seiten geupdatet

--- a/src/main/resources/templates/startseiteKunde.html
+++ b/src/main/resources/templates/startseiteKunde.html
@@ -7,14 +7,14 @@
 	<body class="" style="background-color: rgba(27, 30, 31, 1.00)">
 	
 	<!-- Main container -->
-	<div class="container-xl bg-image d-flex overflow-auto " style="background-image: url('https://images.unsplash.com/photo-1529419412599-7bb870e11810?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=687&q=80'); height: 100vh; ">
+	<div class="container-xl bg-image d-flex overflow-auto " style="background-image: url('https://images.unsplash.com/photo-1626033190220-9b6aa500d49e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80'); height: 100vh; ">
 	
 	<!-- Main row -->
 	<div class="d-flex row h-100">
 	
 	<!-- Top navbar -->
 	<div class="col-12 align-self-start mt-3">
-		<nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient d-flex">
+		<nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient d-flex rounded">
 		<img th:src="@{/image/logo_mini.jpg}" class="img-fluid p-2" alt="Unternehmenslogo">
 	  	<a class="d-none d-sm-flex navbar-brand text-white p-3 disabled" href="#">H&ouml;fische Beamten Versicherung</a>
 	  	<button class="navbar-toggler ms-auto" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -113,7 +113,7 @@
 	
 	<!-- Footer -->
 	<div class="align-self-end mb-2 justify-content-around">
-		<footer class="bg-dark bg-gradient text-center text-secondary text-lg-start">
+		<footer class="bg-dark bg-gradient text-center text-secondary text-lg-start rounded">
 		  <div class="p-3 d-flex justify-content-around">
 			  <a class="text-secondary d-none d-sm-flex" style="text-decoration: none" href="#">Datenschutz und Cookies</a>
 			  <a class="text-secondary d-none d-sm-flex" style="text-decoration: none" href="#">Hilfe</a>
