--- a/src/main/resources/templates/auftragAnlegen.html
+++ b/src/main/resources/templates/auftragAnlegen.html
@@ -106,7 +106,7 @@
 				    <input type="text" class="form-control" id="inputLokation" placeholder="Wohnzimmer">
 				  </div>
 				  <div class="form-check form-switch">
-				  	<input class="form-check-input" style="background-color: black;" type="checkbox" id="flexSwitchCheckChecked" checked>
+				  	<input class="form-check-input" style="background-color: rgba(27, 30, 31, 1.00);" type="checkbox" id="flexSwitchCheckChecked" checked>
 				  	<label class="form-check-label text-white" for="flexSwitchCheckChecked">Adresse verwenden</label>
 				  </div>
 			      <div class="col-md-10">
@@ -135,6 +135,10 @@
 				 
 				 <!-- Unfallgeschehen -->
 				 <h5 class=" text-white mt-5">Unfallhergang</h3>
+				 <div class="col-md-12">
+				    <label for="inputThema" class="form-label text-white">Betreff</label>
+				    <input type="text" class="form-control" id="inputThema" placeholder="Besch&auml;digung">
+				 </div>
 				 <div class="col-md-12">
 				    <label for="inputBeschreibung" class="form-label text-white">Beschreibung</label>
 				    <textarea class="form-control" id="inputBeschreibung" rows="10" placeholder="..."></textarea>
