--- a/src/main/resources/templates/passwordReset.html
+++ b/src/main/resources/templates/passwordReset.html
@@ -1,11 +1,6 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head th:include="fragments/head :: headFragment (pageTitle='Startseite')">
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-   		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-		<!-- Bootstrap 5 -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+	<head th:include="fragments/head :: headFragment (pageTitle='Passwort vergessen')">
 	</head>
 	<body class="" style="background-color: rgba(27, 30, 31, 1.00)">
 	 <div class="container">
@@ -23,14 +18,26 @@
 	            	<h4 class="pt-4 mb-5 fw-light fs-5">Passwort zur&uumlcksetzen</h4>
 				</div>
 				<div class="">
-					<p>Geben Sie die zu Ihrem Konto registrierte E-Mail Adresse ein und wir senden Ihnen eine Mail f&uumlr das Zur&uumlcksetzen Ihres Passworts zu.</p>
+					<p th:unless="${token}">Geben Sie die zu Ihrem Konto registrierte E-Mail Adresse ein und wir senden Ihnen eine Mail f&uumlr das Zur&uumlcksetzen Ihres Passworts zu.</p>
+					<p th:if="${token}">Geben Sie bitte das gew&uuml;nschte neue Passwort ein und wiederholen es im n&auml;chsten Feld.</p>
 				</div>
-	            <form>
+	            <form th:action="@{/user/passwordReset}" modelAttribute="passwortReset" method="post">
 	
-	              <div class="form-floating mb-3">
-	                <input type="mail" class="form-control" id="mail" placeholder="E-Mail Adresse" required autofocus>
+	              <div th:unless="${token}" class="form-floating mb-3">
+	                <input type="mail" class="form-control" name="eMail" id="mail" placeholder="E-Mail Adresse" required autofocus />
 	                <label for="mail">E-Mail Adresse</label>
 	              </div>
+	              <th:block th:if="${token}">
+	              	<input type="hidden" name="token" th:value="${token}" />
+	              	<div class="form-floating mb-3">
+		                <input type="password" class="form-control" name="passwort" id="passwort" placeholder="neues Paswort" required autofocus />
+		                <label for="passwort">Passwort</label>
+		             </div>
+		             <div class="form-floating mb-3">
+		                <input type="password" class="form-control" name="passwortConfirm" id="passwortConfirm" placeholder="wiederhole Paswort" required autofocus />
+		                <label for="passwortConfirm">wiederhole Passwort</label>
+		             </div>
+	              </th:block>
 	
 	              <div class="d-grid gap-2 d-md-block">
 		               		<button class="btn btn-primary fw-bold mb-2" type="submit">Senden</button>
