--- a/src/main/resources/templates/mail/newUserPasswortMail.html
+++ b/src/main/resources/templates/mail/newUserPasswortMail.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<headth:include="fragments/head :: headFragment (pageTitle='')"></head>
+<head th:include="fragments/head :: headFragment (pageTitle='')"></head>
 <body>
     Guten Tag <span th:text="|${benutzer.anrede} ${benutzer.nachname}|"></span>,
    </br>
    Wir freuen uns Sie bei uns Willkommen zu hei&szlig;en.
    </br>
-   Bitte bestätigen Sie bis sp&auml;terstens ${ablauf} ihre Anmeldung mit diesem <a th:href="@{/user/resetPasswort(token=${token})}">Link</a> um Ihrem Konto noch ein Passwort zu hinterlegen, damit Sie unsere Leistungen genießen können.
+   Bitte best&auml;tigen Sie bis sp&auml;terstens <span th:text="${ablauf}" /> ihre Anmeldung mit diesem <a th:with="linkUrl=|${baseUrl}/passwordReset|"
+   th:href="@{${linkUrl}(token=${token})}">Link</a> um Ihrem Konto noch ein Passwort zu hinterlegen, damit Sie unsere Leistungen genie&szlig;en k&ouml;nnen.
    </br>
    </br>
-   Mit freundlichen Grüßen
+   Mit freundlichen Gr&uuml;ßen
    </br>
    Ihr HandmanServ-Team
 </body>
