--- a/src/main/resources/templates/startseite.html
+++ b/src/main/resources/templates/startseite.html
@@ -1,8 +1,96 @@
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 	<head th:include="fragments/head :: headFragment (pageTitle='Startseite')">
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
+   		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+   		<!-- Font Awesome -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"rel="stylesheet"/>
+	<!-- MDB -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+	 <!-- Tabelle -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css"rel="stylesheet"/>
+	<link href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css"rel="stylesheet"/>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
+	<!-- Bootstrap 5 -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</head>
-	<body>
-		<p th:text="|Hallo Benutzer ${model.username}|" />
- 	</body>
+	<body class="" style="background-color: rgba(27, 30, 31, 1.00)">
+	
+	<!-- Main container -->
+	<div class="container-xl bg-image d-flex overflow-auto " style="background-image: url('https://images.unsplash.com/photo-1626033190220-9b6aa500d49e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=687&q=80'); height: 100vh; ">
+	
+	<!-- Main row -->
+	<div class="d-flex row h-100">
+	
+	<!-- Top navbar -->
+	<div th:replace="fragments/menue :: menu" class="col-12 align-self-start mt-3" />
+	
+	<!-- cards -->
+	<div class="col-12 px-4 py-5" id="custom-cards">
+		<h2 class="pb-2 border-bottom text-white">Startseite</h2>
+		
+		<div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+	      <div class="col" sec:authorize="hasAnyRole('ROLE_BERATER','ROLE_VERSICHERUNGSNEHMER','ROLE_BACKOFFICE','ROLE_BAUHERR')">
+	      	<div class="card card-cover h-100 hover-overlay ripple shadow-1-strong overflow-hidden text-white bg-dark rounded-5 shadow-lg d-flex">
+	        <!-- <div class="card card-cover h-100 hover-overlay ripple shadow-1-strong overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('https://images.unsplash.com/photo-1551192866-d755f85224d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');"> -->
+	          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+		          <a href="#!">
+		    		<div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
+		 		  </a>
+		 		  <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-building" viewBox="0 0 16 16">
+					  <path fill-rule="evenodd" d="M14.763.075A.5.5 0 0 1 15 .5v15a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5V14h-1v1.5a.5.5 0 0 1-.5.5h-9a.5.5 0 0 1-.5-.5V10a.5.5 0 0 1 .342-.474L6 7.64V4.5a.5.5 0 0 1 .276-.447l8-4a.5.5 0 0 1 .487.022zM6 8.694 1 10.36V15h5V8.694zM7 15h2v-1.5a.5.5 0 0 1 .5-.5h2a.5.5 0 0 1 .5.5V15h2V1.309l-7 3.5V15z"/>
+					  <path d="M2 11h1v1H2v-1zm2 0h1v1H4v-1zm-2 2h1v1H2v-1zm2 0h1v1H4v-1zm4-4h1v1H8V9zm2 0h1v1h-1V9zm-2 2h1v1H8v-1zm2 0h1v1h-1v-1zm2-2h1v1h-1V9zm0 2h1v1h-1v-1zM8 7h1v1H8V7zm2 0h1v1h-1V7zm2 0h1v1h-1V7zM8 5h1v1H8V5zm2 0h1v1h-1V5zm2 0h1v1h-1V5zm0-2h1v1h-1V3z"/>
+				  </svg>
+	 		  	  <h3 class="pt-3 mb-4 display-6 lh-1 fw-bold">Auftrag anlegen</h3>
+	          </div>
+	        </div>
+	      </div>
+	
+	      <div class="col" sec:authorize="hasRole('ROLE_BAUHERR')">
+	      	<div class="card card-cover h-100 hover-overlay ripple shadow-1-strong overflow-hidden text-white bg-dark rounded-5 shadow-lg">
+	        <!-- <div class="card card-cover h-100 hover-overlay ripple shadow-1-strong overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('https://images.unsplash.com/photo-1551192866-d755f85224d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');"> -->
+	          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+		          <a th:href="@{/auftrag/list/open}" href="#!">
+		    		<div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
+		 		  </a>
+		 		  <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
+					  <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
+					  <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"/>
+				 </svg>
+	            <h3 class="pt-3 mb-4 display-6 lh-1 fw-bold">Offene Auftr&auml;ge</h3>
+	          </div>
+	        </div>
+	      </div>
+	
+	      <div class="col" sec:authorize="hasRole('ROLE_VERSICHERUNGSNEHMER')">
+	      	<div class="card card-cover h-100 hover-overlay ripple shadow-1-strong overflow-hidden text-white bg-dark rounded-5 shadow-lg">
+	        <!-- <div class="card card-cover h-100 hover-overlay ripple shadow-1-strong overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('https://images.unsplash.com/photo-1551192866-d755f85224d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');"> -->
+	          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+		          <a href="#!">
+		    		<div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
+		 		  </a>
+		 		  <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-bookmark-star" viewBox="0 0 16 16">
+					  <path d="M7.84 4.1a.178.178 0 0 1 .32 0l.634 1.285a.178.178 0 0 0 .134.098l1.42.206c.145.021.204.2.098.303L9.42 6.993a.178.178 0 0 0-.051.158l.242 1.414a.178.178 0 0 1-.258.187l-1.27-.668a.178.178 0 0 0-.165 0l-1.27.668a.178.178 0 0 1-.257-.187l.242-1.414a.178.178 0 0 0-.05-.158l-1.03-1.001a.178.178 0 0 1 .098-.303l1.42-.206a.178.178 0 0 0 .134-.098L7.84 4.1z"/>
+					  <path d="M2 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v13.5a.5.5 0 0 1-.777.416L8 13.101l-5.223 2.815A.5.5 0 0 1 2 15.5V2zm2-1a1 1 0 0 0-1 1v12.566l4.723-2.482a.5.5 0 0 1 .554 0L13 14.566V2a1 1 0 0 0-1-1H4z"/>
+				</svg>
+	            <h3 class="pt-3 mb-4 display-6 lh-1 fw-bold">Polices einsehen</h3>
+	          </div>
+	        </div>
+	      </div>
+	    </div>
+	</div>
+	
+	
+	<div th:replace="fragments/footer :: footer"/>
+	
+	
+  	</div>
+	</div>
+	</body>
 </html>
