--- a/src/main/resources/templates/offeneAuftraege.html
+++ b/src/main/resources/templates/offeneAuftraege.html
@@ -1,8 +1,25 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
-	<head th:include="fragments/head :: headFragment (pageTitle='Startseite')">
+	<head th:include="fragments/head :: headFragment (pageTitle='offene Auftr&auml;ge')">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
    		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+   		<title th:text="${pageTitle}">HandmanServ</title>
+	<!-- Font Awesome -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"rel="stylesheet"/>
+	<!-- Google Fonts -->
+	<link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"rel="stylesheet"/>
+	<!-- MDB -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.css"rel="stylesheet"/>
+	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.6.0/mdb.min.js"></script>
+	 <!-- Tabelle -->
+	<link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/css/bootstrap.min.css"rel="stylesheet"/>
+	<link href="https://cdn.datatables.net/1.11.3/css/dataTables.bootstrap5.min.css"rel="stylesheet"/>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
+	<script type="text/javascript" src="https://cdn.datatables.net/1.11.3/js/dataTables.bootstrap5.min.js"></script>
+	<!-- Bootstrap 5 -->
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"></link>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 	</head>
 	<body class="" style="background-color: rgba(27, 30, 31, 1.00)">
 	
@@ -13,7 +30,7 @@
 	<div class="d-flex row h-100">
 	
 	<!-- Top navbar -->
-	<div class="col-12 align-self-start mt-3">
+	<div th:replace="fragments/menue :: menu" class="col-12 align-self-start mt-3">
 		<nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient d-flex rounded">
 		<img th:src="@{/image/logo_mini.jpg}" class="img-fluid p-2" alt="Unternehmenslogo">
 	  	<a class="d-none d-sm-flex navbar-brand text-white p-3 disabled" href="#">H&ouml;fische Beamten Versicherung</a>
@@ -59,7 +76,7 @@
 	<!-- Link zur mehr Infos: https://datatables.net/examples/styling/bootstrap5.html -->
 	
 	<div class="col-12 px-4 py-5" id="custom-cards">
-		<h2 class="pb-2 border-bottom text-white">Offene Auftr&auml;ge</h2>
+		<h2 class="pb-2 border-bottom text-white" th:text="${auftragStatus}">Offene Auftr&auml;ge</h2>
 		 
 		<div class="dataTables_wrapper dt-bootstrap5 text-white mt-5">	
 	   		<!-- Tabelle -->
@@ -71,27 +88,22 @@
 				                <th>Nr</th>
 				                <th>Status</th>
 				                <th>Kontakt</th>
-				                <th>Betreff</th>
 				                <th>Datum</th>
 				                <th>Bearbeiter</th>
 				            </tr>
 				        </thead>
-				        <tbody>
-				            <tr class="text-white">
-				                <td>4</td>
-				                <td>Offen</td>
-				                <td>Hans Zimmer</td>
-				                <td>Nasse Wand</td>
-				                <td>01.01.2020</td>
-				                <td>Franz Meier</td>
+				        <tbody th:unless="${#lists.isEmpty(auftraege)}">
+				            <tr class="text-white" th:each="auftrag : ${auftraege}">
+				                <td th:text="${auftrag.nummer}">4</td>
+				                <td th:text="${auftrag.status.name}">Offen</td>
+				                <td th:text="|${auftrag.vorname} ${auftrag.nachname}|">Hans Zimmer</td>
+				                <td th:text="${auftrag.erstellungsdatum}">01.01.2020</td>
+				                <td th:text="|${auftrag.bauherr.vorname} ${auftrag.bauherr.nachname}|">Franz Meier</td>
 				            </tr>
+				        </tbody>
+				        <tbody th:if="${#lists.isEmpty(auftraege)}">
 				            <tr class="text-white">
-				                <td>5</td>
-				                <td>Abgeschlossen</td>
-				                <td>Jan Mueller</td>
-				                <td>Auto Unfall</td>
-				                <td>01.06.2021</td>
-				                <td>Hans Schwarz</td>
+				                <td colspan="5">Es sind noch keine Auftr&auml;ge vorhanden.</td>
 				            </tr>
 				        </tbody>
 				        <tfoot>
@@ -99,7 +111,6 @@
 				                <th>Nr</th>
 				                <th>Status</th>
 				                <th>Kontakt</th>
-				                <th>Betreff</th>
 				                <th>Datum</th>
 				                <th>Bearbeiter</th>
 				            </tr>
