--- a/src/main/resources/templates/startseite.html
+++ b/src/main/resources/templates/startseite.html
@@ -52,18 +52,18 @@
 	        </div>
 	      </div>
 	
-	      <div class="col" sec:authorize="hasRole('ROLE_BAUHERR')">
+	      <div class="col">
 	      	<div class="card card-cover h-100 hover-overlay ripple shadow-1-strong overflow-hidden text-white bg-dark rounded-5 shadow-lg">
 	        <!-- <div class="card card-cover h-100 hover-overlay ripple shadow-1-strong overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('https://images.unsplash.com/photo-1551192866-d755f85224d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');"> -->
 	          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-		          <a th:href="@{/auftrag/list/open}" href="#!">
+		          <a th:href="@{/auftrag/list}" href="#!">
 		    		<div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
 		 		  </a>
 		 		  <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
 					  <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
 					  <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"/>
 				 </svg>
-	            <h3 class="pt-3 mb-4 display-6 lh-1 fw-bold">Offene Auftr&auml;ge</h3>
+	            <h3 class="pt-3 mb-4 display-6 lh-1 fw-bold">Auftr&auml;ge</h3>
 	          </div>
 	        </div>
 	      </div>
