--- a/src/main/resources/templates/startseite.html
+++ b/src/main/resources/templates/startseite.html
@@ -40,7 +40,7 @@
 	      	<div class="card card-cover h-100 hover-overlay ripple shadow-1-strong overflow-hidden text-white bg-dark rounded-5 shadow-lg d-flex">
 	        <!-- <div class="card card-cover h-100 hover-overlay ripple shadow-1-strong overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('https://images.unsplash.com/photo-1551192866-d755f85224d5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80');"> -->
 	          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-		          <a href="#!">
+		          <a th:href="@{/auftrag/add}" href="#!">
 		    		<div class="mask" style="background-color: rgba(251, 251, 251, 0.2)"></div>
 		 		  </a>
 		 		  <svg xmlns="http://www.w3.org/2000/svg" width="80" height="80" fill="currentColor" class="bi bi-building" viewBox="0 0 16 16">
